Add recipes directory and first recipe

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="pb-cookies.html">Peanut Butter Cookies</a>
+        <a href="recipes/pb-cookies.html">Peanut Butter Cookies</a>
+       
+
     </body>
 </html>
