--- a/recipes/pb-cookies.html
+++ b/recipes/pb-cookies.html
@@ -8,6 +8,32 @@
         <h1>Peanut Butter Cookies</h1>
         <img src="pb-cookies.jpg" alt="pb-cookies">
         <h2>Simple and traditional peanut butter cookies</h2>
+        <p><strong>Time:</strong> 1 hour    <strong>Servings:</strong> 54</p>
+      
+        <h2>Ingredients</h2>
+        <ul>
+            <li>1 ¼ cups creamy peanut butter</li>
+            <li>1 cup margarine</li>
+            <li>¾ cup white sugar</li>
+            <li>¾ cup packed light brown sugar</li>
+            <li>2 eggs</li>
+            <li>½ teaspoon vanilla extract</l>
+        </ul>
+
+        <h2>Steps</h2>
+        <ol>
+            <li>Preheat the oven to 375 degrees F (190 degrees C)</li>
+            <li>In a large bowl, cream together the peanut butter, margarine,
+                brown sugar and white sugar. Beat in the eggs and vanilla. 
+                Combine the flour, baking powder and baking soda; 
+                stir into the peanut butter mixture. Form dough into walnut 
+                sized balls and place them 2 inches apart onto ungreased cookie
+                sheets. Dip a fork into flour and criss cross each cookie to 
+                flatten slightly.</li>
+            <li>Bake for 12 to 15 minutes in the preheated oven, until just
+                 lightly browned. Allow cookies to cool on baking sheet for 
+                 5 minutes before removing to a wire rack to cool completely.</li>
+        </ol>
 
     </body>
 </html>
