--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/pb-cookies.html">Peanut Butter Cookies</a>
-       
 
+        <ul>
+            <li><a href="recipes/pb-cookies.html">Peanut Butter Cookies</a></li>
+            <li><a href="recipes/strawberry-oatmeal-smoothie.html">Strawberry Oatmeal Smoothie</a></li>
+            <li><a href="recipes/simple-salmon.html">Simple Salmon</a></li>
+        </ul>
     </body>
 </html>
