--- a/recipes/pb-cookies.html
+++ b/recipes/pb-cookies.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <title>Peanut Butter Cookies</title>
@@ -12,7 +12,7 @@
       
         <h2>Ingredients</h2>
         <ul>
-            <li>1 ¼ cups creamy peanut butter</li>
+            <li>1 ¼ cups creamy peanut butter</li>
             <li>1 cup margarine</li>
             <li>¾ cup white sugar</li>
             <li>¾ cup packed light brown sugar</li>
